# 6502

./: CMakeLists.txt  cpu.c  cpu.h  instr.c
src/: bus.c  bus.h  cpu.c  cpu.h  main.c  main.h  mem.c  mem.h  ppu.c  ppu.h
